JWT y pagina funcional