@@ -1,8 +1,7 @@
 package com.example.demo.security;
 
 import java.util.Arrays;
-
-
+import java.util.List;
 
 import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
@@ -15,6 +14,8 @@ import org.springframework.web.filter.CorsFilter;
 
 @Configuration
 public class CorsConfig {
+
+    
     @Bean
     public FilterRegistrationBean<CorsFilter> corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
@@ -22,16 +23,14 @@ public class CorsConfig {
         CorsConfiguration configuration = new CorsConfiguration();
 
         configuration.setAllowCredentials(true);
-        configuration.addAllowedOrigin("http://localhost:4200");
-        configuration.setAllowedHeaders(Arrays.asList(
-            HttpHeaders.AUTHORIZATION, 
-            HttpHeaders.CONTENT_TYPE, 
-            HttpHeaders.ACCEPT));
+        configuration.setAllowedOriginPatterns(List.of("http://localhost:4200"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList(
             HttpMethod.GET.name(),
             HttpMethod.DELETE.name(),
             HttpMethod.POST.name(),
-            HttpMethod.PUT.name()
+            HttpMethod.PUT.name(),
+            HttpMethod.OPTIONS.name()
         ));
         source.registerCorsConfiguration("/**", configuration);
         FilterRegistrationBean<CorsFilter> bean = new FilterRegistrationBean<CorsFilter>(new CorsFilter(source));
